# sphinxcontrib-screenshot

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  foo.txt  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: publish-test.yml  publish.yml  style-check.yml  unit-test.yml
.jules/: sentinel.md
doc/: conf.py  index.rst  make.bat
sphinxcontrib/: screenshot.py
sphinxcontrib/screenshot/: __init__.py  _common.py  _ffmpeg.py  _screencast.py  _screenshot.py  _wsgi.py
sphinxcontrib/screenshot/static/: screenshot-theme.css
tests/: conftest.py  test_alias.py  test_browsers.py  test_color_scheme.py  test_contexts.py  test_figclass.py  test_full_page.py  test_headers.py  test_it.py  test_locale.py  test_locator.py  test_mobile.py  test_pdf.py  test_root.py  test_screencast.py  test_security.py  test_status_code.py  test_timezone.py  test_wsgi_apps.py
tests/roots/test-alias/: index.rst
tests/roots/test-alias-color-scheme-auto/: index.rst  page.html
tests/roots/test-alias-screencast/: index.rst
tests/roots/test-auto-dark/: conf.py  index.html  index.rst
tests/roots/test-browsers/: chromium.rst  conf.py  firefox.rst  index.rst
tests/roots/test-color-schemes/: conf.py  example_app.py  index.rst
tests/roots/test-contexts/: conf.py  example_contexts_app.py  index.rst
tests/roots/test-default-browser/: conf.py  example_default_browser_app.py  index.rst
tests/roots/test-default-color-scheme/: conf.py  index.html  index.rst
tests/roots/test-default-full-page/: conf.py  index.html
tests/roots/test-default-locale/: example_locale_app.py  index.rst
tests/roots/test-default-size/: conf.py  index.rst
tests/roots/test-default-timezone/: conf.py
tests/roots/test-figclass/: index.rst
tests/roots/test-full-page/: conf.py  index.rst
tests/roots/test-headers/: conf.py  example_headers_app.py  index.rst
tests/roots/test-locale/: conf.py  index.rst
tests/roots/test-locator/: conf.py  index.rst
tests/roots/test-locator-padding/: index.html  index.rst
tests/roots/test-mobile/: conf.py  example_mobile_app.py  index.rst
tests/roots/test-pdf/: index.rst
tests/roots/test-root/: conf.py  index.rst
tests/roots/test-root/resources/: example.html
tests/roots/test-root/sections/: index.rst
tests/roots/test-screencast/: index.rst
tests/roots/test-screencast-attrs/: index.rst
tests/roots/test-screencast-attrs/resources/: anim.html
tests/roots/test-screencast-autoplay/: index.rst
tests/roots/test-screencast-color-scheme-auto/: index.rst
tests/roots/test-screencast-config-defaults/: conf.py  index.rst
tests/roots/test-screencast-contexts/: conf.py  example_screencast_contexts_app.py
tests/roots/test-screencast-contexts-legacy/: conf.py  example_screencast_contexts_legacy_app.py  index.rst
tests/roots/test-screencast-ffmpeg-options/: conf.py  index.rst
tests/roots/test-screencast-locator/: index.rst
tests/roots/test-screencast-locator-padding/: index.rst
tests/roots/test-screencast-poster/: index.rst
tests/roots/test-screencast-poster-auto/: index.rst
tests/roots/test-screencast-poster-auto-end/: index.rst
tests/roots/test-screencast-trim/: index.rst
tests/roots/test-status-code-warning/: conf.py  example_404_app.py  index.rst
tests/roots/test-timezone/: example_timezone_app.py  index.rst
tests/roots/test-wsgi-apps/: conf.py  example_app.py  index.rst
tests/test-root/: index.rst
tests/test_wsgi_apps/: test_default.yml
(+5 files in other folders)
