[metadata]
name = sphinxcontrib-screenshot
version = attr: sphinxcontrib.screenshot.__version__
description = A Shpinx extension to embed webpage screenshots.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
author = Shuhei Iitsuka
author_email = tushuhei@gmail.com
url = https://github.com/tushuhei/sphinxcontrib-screenshot/
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires= >= 3.9
packages =
    sphinxcontrib
include_package_data = True
test_suite = tests
install_requires =
    playwright
    sphinx
    portpicker

[options.extras_require]
dev =
    beautifulsoup4
    build
    flake8
    isort
    mypy
    Pillow
    pytest
    pytest-regressions[image]
    sphinx[test]
    toml
    twine
    types-beautifulsoup4
    types-docutils
    types-portpicker
    types-Pillow
    types-setuptools
    yapf

[yapf]
based_on_style = yapf

[flake8]
indent-size = 2

[mypy]
python_version = 3.9
pretty = True
